# Home-Work-32-Task-2

./: CMakeLists.txt
Home-Work-32-Task-2/: CMakeLists.txt  Home-Work-32-Task-2.cpp  Home-Work-32-Task-2.h
